k8s-prod.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ms-portal-web
  namespace: k8s-portal
spec:
  replicas: 1 # Adjust the number of replicas as needed
  selector:
    matchLabels:
      app: ms-portal-web
  template:
    metadata:
      labels:
        app: ms-portal-web
    spec:
      containers:
      - name: ms-portal-web
        image: docker-registry.jalaniagaelok.web.id/ms-portal-web-prod:2.2.5 # Replace with your Vue.js Docker image and tag 
        imagePullPolicy: Always
        ports:
        - containerPort: 8013
      imagePullSecrets:
      - name: registry-1
        
---
apiVersion: v1
kind: Service
metadata:
  name: ms-portal-web-service
  namespace: k8s-portal
spec:
  selector:
    app: ms-portal-web
  ports:
    - appProtocol: http
      name: http-jalasignin
      protocol: TCP
      port: 8000  # Port on which the service will be exposed
      targetPort: 8013  # Port on which the Vue.js app is running in the pod        

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-cloudflare
    nginx.ingress.kubernetes.io/affinity: "true"
    nginx.ingress.kubernetes.io/connection-proxy-header: keep-alive
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-buffer-size: 512k
    nginx.ingress.kubernetes.io/proxy-buffering: "on"
    nginx.ingress.kubernetes.io/proxy-buffers-number: "4"
    nginx.ingress.kubernetes.io/proxy-headers: "true"
    nginx.ingress.kubernetes.io/proxy-pass-request-headers: "on"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/use-regex: "true"
  labels:
    io.portainer.kubernetes.ingress.owner: ""
  name: k8s-portal-ingress
  namespace: k8s-portal
spec:
  ingressClassName: nginx
  rules:
  - host: portal.jalanet.id
    http:
      paths:
      - backend:
          service:
            name: ms-portal-web-service
            port:
              number: 8000
        path: /(|$)(.*)
        pathType: ImplementationSpecific
#   tls:
#   - hosts:
#     - elibrary.jalanet.id
#     secretName: jalanet-wildcard-tls
# status:
#   loadBalancer:
#     ingress:
#     - ip: 10.26.11.21
